--- a/stable/insert.ipynb
+++ b/stable/insert.ipynb
@@ -2,172 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0, 'id', 'INTEGER', 0, None, 1),\n",
-       " (1, 'url', 'TEXT', 0, None, 0),\n",
-       " (2, 'title', 'TEXT', 0, None, 0),\n",
-       " (3, 'clean_title', 'TEXT', 0, None, 0),\n",
-       " (4, 'count', 'INTEGER', 0, None, 0)]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import sqlite3\n",
-    "\n",
-    "conn = sqlite3.Connection('data/data.db')\n",
-    "cur = conn.cursor()\n",
-    "\n",
-    "# cur.execute('select * from articles limit 2')\n",
-    "cur.execute('PRAGMA table_info(articles)')\n",
-    "\n",
-    "cur.fetchall()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import pandas as pd\n",
+    "# import json\n",
+    "# import pandas as pd\n",
     "\n",
-    "df = []\n",
-    "with open('data/embeddings.jsonl', 'r') as file:\n",
-    "    for line in file:\n",
-    "        df.append(json.loads(line))\n",
-    "df = pd.DataFrame(df)"
+    "# df = []\n",
+    "# with open('data/embeddings.jsonl', 'r') as file:\n",
+    "#     for line in file:\n",
+    "#         df.append(json.loads(line))\n",
+    "# df = pd.DataFrame(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>embedding</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3529094</td>\n",
-       "      <td>[-0.004664379637688398, -0.0426100455224514, 0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3529252</td>\n",
-       "      <td>[-0.006281876936554909, -0.008619319647550583,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3529302</td>\n",
-       "      <td>[-0.019519152119755745, -0.033772557973861694,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3529337</td>\n",
-       "      <td>[-0.015639616176486015, -0.003205843036994338,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3529365</td>\n",
-       "      <td>[0.03846396133303642, -0.022736381739377975, 0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9995</th>\n",
-       "      <td>3809589</td>\n",
-       "      <td>[-0.024110419675707817, -0.0011983130825683475...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9996</th>\n",
-       "      <td>3809767</td>\n",
-       "      <td>[-0.029099317267537117, 0.03158048540353775, -...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9997</th>\n",
-       "      <td>3809808</td>\n",
-       "      <td>[0.03068152628839016, 0.04783761128783226, 0.0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9998</th>\n",
-       "      <td>3809846</td>\n",
-       "      <td>[-0.09691222012042999, -0.005082827061414719, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9999</th>\n",
-       "      <td>3809855</td>\n",
-       "      <td>[-0.02249404601752758, 0.022808795794844627, 0...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10000 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           id                                          embedding\n",
-       "0     3529094  [-0.004664379637688398, -0.0426100455224514, 0...\n",
-       "1     3529252  [-0.006281876936554909, -0.008619319647550583,...\n",
-       "2     3529302  [-0.019519152119755745, -0.033772557973861694,...\n",
-       "3     3529337  [-0.015639616176486015, -0.003205843036994338,...\n",
-       "4     3529365  [0.03846396133303642, -0.022736381739377975, 0...\n",
-       "...       ...                                                ...\n",
-       "9995  3809589  [-0.024110419675707817, -0.0011983130825683475...\n",
-       "9996  3809767  [-0.029099317267537117, 0.03158048540353775, -...\n",
-       "9997  3809808  [0.03068152628839016, 0.04783761128783226, 0.0...\n",
-       "9998  3809846  [-0.09691222012042999, -0.005082827061414719, ...\n",
-       "9999  3809855  [-0.02249404601752758, 0.022808795794844627, 0...\n",
-       "\n",
-       "[10000 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,13 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Writing buffer.\n",
       "Writing buffer.\n",
       "Writing buffer.\n",
       "Writing buffer.\n",
@@ -283,7 +135,6 @@
    "source": [
     "import json\n",
     "import sqlite3\n",
-    "import os \n",
     "import pandas as pd\n",
     "\n",
     "FROM_DIR = 'source'\n",
@@ -321,12 +172,21 @@
     "                buffer\n",
     "            )\n",
     "            conn.commit()\n",
-    "            buffer = []\n"
+    "            buffer = []\n",
+    "\n",
+    "    if len(buffer) > 0:\n",
+    "        print(\"Writing buffer.\")\n",
+    "        cur.executemany(\n",
+    "            insert_articles,\n",
+    "            buffer\n",
+    "        )\n",
+    "        conn.commit()\n",
+    "        buffer = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,49 +225,6 @@
     "cur.execute(index5)\n",
     "\n",
     "conn.commit()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Test execution speed."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import time\n",
-    "# import sqlite3\n",
-    "\n",
-    "# conn = sqlite3.Connection('data/data.db')\n",
-    "# cur = conn.cursor()\n",
-    "\n",
-    "# query = \"indiana j\"\n",
-    "\n",
-    "# # This is messed up but somehow this optimizes the query plan.\n",
-    "# if len(query) > 2:\n",
-    "#     cur.execute(\"PRAGMA case_sensitive_like = ON\")\n",
-    "#     conn.commit()\n",
-    "# else: \n",
-    "#     cur.execute(\"PRAGMA case_sensitive_like = OFF\")\n",
-    "#     conn.commit()\n",
-    "\n",
-    "# start = time.time()\n",
-    "# for _ in range(1000):\n",
-    "#     cur.execute(f\"\"\"\n",
-    "#         select id, title, count \n",
-    "#         from articles \n",
-    "#         where clean_title like '{query}%' \n",
-    "#         order by count desc limit 5\"\"\")\n",
-    "#     if _ == 0:\n",
-    "#         for r in cur.fetchall():\n",
-    "#             print(r)\n",
-    "\n",
-    "# print(time.time() - start)"
    ]
   }
  ],
