--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,14 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "filter"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(filter(lambda x: x != 3, [3, 4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.0'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.spatial import distance\n",
+    "\n",
+    "v = [1, 2, 3]\n",
+    "\n",
+    "str(distance.cosine(v, v))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4699587, 'fish'),\n",
+       " (863, 'american civil war'),\n",
+       " (2569378, 'hurricane katrina'),\n",
+       " (23534170, 'fantasy'),\n",
+       " (2495537, 'white americans'),\n",
+       " (3969, 'buckingham palace'),\n",
+       " (385237, 'civil township'),\n",
+       " (5884, 'charles dickens'),\n",
+       " (273285, 'race and ethnicity in the united states census'),\n",
+       " (21291954, 'ms-dos'),\n",
+       " (19334491, 'vishnu'),\n",
+       " (5865, 'council of europe'),\n",
+       " (585629, 'kyiv'),\n",
+       " (42010, 'queen (band)'),\n",
+       " (333058, 'doubleday (publisher)'),\n",
+       " (19985174, 'dutch language'),\n",
+       " (54422, 'chinese civil war'),\n",
+       " (909, 'anglican communion'),\n",
+       " (58313, 'list of counties in wisconsin'),\n",
+       " (1998, 'austin, texas')]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "conn = sqlite3.Connection('stable/data/data.db')\n",
+    "cur = conn.cursor()\n",
+    "cur.execute(\"select id, clean_title from articles where count > 500 order by random() limit 20\")\n",
+    "cur.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "\n",
-    "for _ in range(10):\n",
-    "    requests.get('http://127.0.0.1:5000/suggestion/z/limit/5').text"
+    "for _ in range(1000):\n",
+    "    requests.get('http://127.0.0.1:5000/suggestion/rod/limit/5').text"
    ]
   },
   {
