--- a/stable/insert.ipynb
+++ b/stable/insert.ipynb
@@ -1,64 +1,137 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This takes way too long. Bigger buffer?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n"
+     ]
+    }
+   ],
    "source": [
-    "# import json\n",
-    "# import pandas as pd\n",
+    "import json\n",
+    "import sqlite3\n",
     "\n",
-    "# df = []\n",
-    "# with open('data/embeddings.jsonl', 'r') as file:\n",
-    "#     for line in file:\n",
-    "#         df.append(json.loads(line))\n",
-    "# df = pd.DataFrame(df)"
+    "conn = sqlite3.Connection('data/data.db')\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "create_embeddings = \"\"\"\n",
+    "    CREATE TABLE embeddings (\n",
+    "        id INTEGER PRIMARY KEY,         \n",
+    "        vector TEXT              \n",
+    "    );\n",
+    "\"\"\"\n",
+    "cur.execute(create_embeddings)\n",
+    "conn.commit()\n",
+    "\n",
+    "insert_embeddings = \"\"\"\n",
+    "    INSERT INTO embeddings (id, vector) VALUES (?, ?);\n",
+    "\"\"\"\n",
+    "\n",
+    "buffer = []\n",
+    "with open('data/embeddings.jsonl', 'rt') as file:\n",
+    "    for line in file:\n",
+    "        j = json.loads(line)\n",
+    "        buffer.append((\n",
+    "            j['id'], \n",
+    "            json.dumps(j['embedding'])\n",
+    "        ))\n",
+    "        if len(buffer) > 10000:\n",
+    "            print(\"Writing buffer.\")\n",
+    "            cur.executemany(\n",
+    "                insert_embeddings, \n",
+    "                buffer\n",
+    "            )\n",
+    "            conn.commit()\n",
+    "            buffer = []\n",
+    "\n",
+    "if len(buffer) > 0:\n",
+    "    print(\"Writing buffer.\")        \n",
+    "    cur.executemany(\n",
+    "        insert_embeddings, \n",
+    "        buffer\n",
+    "    )\n",
+    "    conn.commit()\n",
+    "    buffer = []"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import json\n",
-    "# import sqlite3\n",
-    "# import os \n",
-    "\n",
-    "# FROM_DIR = 'transformed'\n",
-    "\n",
-    "# conn = sqlite3.Connection('data/data.db')\n",
-    "# cur = conn.cursor()\n",
-    "\n",
-    "# create_embeddings = \"\"\"\n",
-    "#     CREATE TABLE embeddings (\n",
-    "#         id INTEGER PRIMARY KEY,         \n",
-    "#         vector TEXT              \n",
-    "#     );\n",
-    "# \"\"\"\n",
-    "# cur.execute(create_embeddings)\n",
-    "# conn.commit()\n",
-    "\n",
-    "# insert_embeddings = \"\"\"\n",
-    "#     INSERT INTO embeddings (id, vector) VALUES (?, ?);\n",
-    "# \"\"\"\n",
-    "\n",
-    "#     with open(os.path.join(FROM_DIR, file_name), 'rt') as file:\n",
-    "        \n",
-    "#             cur.execute(\n",
-    "#                 insert_embeddings, \n",
-    "#                 (\n",
-    "#                     j['id'], \n",
-    "#                     json.dumps(j['embedding'])\n",
-    "#                 )\n",
-    "#             )\n",
-    "#             conn.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
