--- a/stable/embed.ipynb
+++ b/stable/embed.ipynb
@@ -170,6 +170,48 @@
     "            embed_df(buffer, client)\n",
     "            buffer = []\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'id'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m file:\n\u001b[0;32m     11\u001b[0m     j \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mloads(line)\n\u001b[0;32m     12\u001b[0m     buffer\u001b[38;5;241m.\u001b[39mappend({\n\u001b[1;32m---> 13\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m: j[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(j[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbody\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msplit()[: TOKEN_LIMIT])\n\u001b[0;32m     15\u001b[0m     })\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(buffer) \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m BUFFER_SIZE:\n\u001b[0;32m     17\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'id'"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "TOKEN_LIMIT = 100\n",
+    "BUFFER_SIZE = 10000\n",
+    "\n",
+    "i = 0\n",
+    "\n",
+    "with open('../transformed/data/post_filter_scrape.jsonl', 'r', encoding='utf-8') as file:\n",
+    "    buffer = []\n",
+    "    for line in file:\n",
+    "        j = json.loads(line)\n",
+    "        buffer.append({\n",
+    "            'id': j['id'],\n",
+    "            'text': ' '.join(j['body'].split()[: TOKEN_LIMIT])\n",
+    "        })\n",
+    "        if len(buffer) >= BUFFER_SIZE:\n",
+    "            break\n",
+    "            # buffer = pd.DataFrame(buffer)\n",
+    "            # i += 1\n",
+    "            # print(f\"Processed buffer #{i}\")\n",
+    "            # embed_df(buffer, client)\n",
+    "            # buffer = []\n"
+   ]
   }
  ],
  "metadata": {
