--- a/stable/insert.ipynb
+++ b/stable/insert.ipynb
@@ -22,62 +22,6 @@
       "Writing buffer.\n",
       "Writing buffer.\n",
       "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
       "Writing buffer.\n"
      ]
     }
@@ -85,6 +29,7 @@
    "source": [
     "import json\n",
     "import sqlite3\n",
+    "import numpy as np\n",
     "\n",
     "conn = sqlite3.Connection('data/data.db')\n",
     "cur = conn.cursor()\n",
@@ -92,7 +37,7 @@
     "create_embeddings = \"\"\"\n",
     "    CREATE TABLE embeddings (\n",
     "        id INTEGER PRIMARY KEY,         \n",
-    "        vector TEXT              \n",
+    "        vector BLOB              \n",
     "    );\n",
     "\"\"\"\n",
     "cur.execute(create_embeddings)\n",
@@ -108,9 +53,9 @@
     "        j = json.loads(line)\n",
     "        buffer.append((\n",
     "            j['id'], \n",
-    "            json.dumps(j['embedding'])\n",
+    "            np.array(j['embedding']).tobytes()\n",
     "        ))\n",
-    "        if len(buffer) > 10000:\n",
+    "        if len(buffer) > 100000:\n",
     "            print(\"Writing buffer.\")\n",
     "            cur.executemany(\n",
     "                insert_embeddings, \n",
@@ -138,63 +83,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
-      "Writing buffer.\n",
       "Writing buffer.\n",
       "Writing buffer.\n",
       "Writing buffer.\n",
@@ -238,7 +126,7 @@
     "        buffer.append(\n",
     "            (j['id'], j['url'], j['title'], j['title'].lower().strip(), j['count'])\n",
     "        )\n",
-    "        if len(buffer) > 10000:\n",
+    "        if len(buffer) > 100000:\n",
     "            print(\"Writing buffer.\")\n",
     "            cur.executemany(\n",
     "                insert_articles,\n",
@@ -258,46 +146,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These indexes are not necessary in the binary search version."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import sqlite3\n",
-    "import os \n",
-    "import pandas as pd\n",
+    "# import json\n",
+    "# import sqlite3\n",
+    "# import os \n",
+    "# import pandas as pd\n",
     "\n",
-    "conn = sqlite3.Connection('data/data.db')\n",
-    "cur = conn.cursor()\n",
+    "# conn = sqlite3.Connection('data/data.db')\n",
+    "# cur = conn.cursor()\n",
     "\n",
-    "index1 = \"\"\"\n",
-    "    CREATE INDEX articles_title_index ON articles(title);\n",
-    "\"\"\"\n",
+    "# index1 = \"\"\"\n",
+    "#     CREATE INDEX articles_title_index ON articles(title);\n",
+    "# \"\"\"\n",
     "\n",
-    "index2 = \"\"\"\n",
-    "    CREATE INDEX articles_clean_title_index ON articles(clean_title);\n",
-    "\"\"\"\n",
+    "# index2 = \"\"\"\n",
+    "#     CREATE INDEX articles_clean_title_index ON articles(clean_title);\n",
+    "# \"\"\"\n",
     "\n",
-    "index3 = \"\"\"\n",
-    "    CREATE INDEX articles_url_index ON articles(url);\n",
-    "\"\"\"\n",
+    "# index3 = \"\"\"\n",
+    "#     CREATE INDEX articles_url_index ON articles(url);\n",
+    "# \"\"\"\n",
     "\n",
-    "index4 = \"\"\"\n",
-    "    CREATE INDEX articles_count_index ON articles(count);\n",
-    "\"\"\"\n",
+    "# index4 = \"\"\"\n",
+    "#     CREATE INDEX articles_count_index ON articles(count);\n",
+    "# \"\"\"\n",
     "\n",
-    "index5 = \"\"\"\n",
-    "    CREATE INDEX idx_articles_clean_title_count ON articles(clean_title, count DESC);\n",
-    "\"\"\"\n",
+    "# index5 = \"\"\"\n",
+    "#     CREATE INDEX idx_articles_clean_title_count ON articles(clean_title, count DESC);\n",
+    "# \"\"\"\n",
     "\n",
-    "cur.execute(index1)\n",
-    "cur.execute(index2)\n",
-    "cur.execute(index3)\n",
-    "cur.execute(index4)\n",
-    "cur.execute(index5)\n",
+    "# cur.execute(index1)\n",
+    "# cur.execute(index2)\n",
+    "# cur.execute(index3)\n",
+    "# cur.execute(index4)\n",
+    "# cur.execute(index5)\n",
     "\n",
-    "conn.commit()\n"
+    "# conn.commit()\n"
    ]
   }
  ],
